@@ -17,6 +17,9 @@ Refactoring from Sublime 3
 	* table input of count of columns and rows, format column_count|row_count
 	* link
 
+* syntax checking for:
+	* for links, test whether url starts with http:// or https:// if not http:// is added
+
 
 
 
